k8s/applications/external/proxmox/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: proxmox-pve01-tls
  namespace: proxmox
spec:
  parentRefs:
    - name: tls-passthrough
      namespace: gateway
  hostnames:
    - "pve01.home.eudald.gr"
  rules:
    - backendRefs:
        - name: proxmox-pve01
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: proxmox-pve02-tls
  namespace: proxmox
spec:
  parentRefs:
    - name: tls-passthrough
      namespace: gateway
  hostnames:
    - "pve02.home.eudald.gr"
  rules:
    - backendRefs:
        - name: proxmox-pve02
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: proxmox-pve03-tls
  namespace: proxmox
spec:
  parentRefs:
    - name: tls-passthrough
      namespace: gateway
  hostnames:
    - "pve03.home.eudald.gr"
  rules:
    - backendRefs:
        - name: proxmox-pve03
          port: 443
